git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1745 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbpolizacontable/startup.vm
@@ -104,7 +104,7 @@
         </table>
 		
         
-        <!--form for conceptos contables -->
+        <!--form for poliza contable -->
         <form id="formactbpolizacontable00" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
                 <div id="div_one" class="panelcito_modal ctbpolizacontable_div_one"  style="display:none;" title="">
