--- a/erp-quimicos/src/main/webapp/vm/ctbgenerapolizas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbgenerapolizas/startup.vm
@@ -6,15 +6,15 @@
         #include("${layoutheader}")
         
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/ctbdefasientos/formaCtbDefAsientos.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/ctbgenerapolizas/formaCtbGeneraPoliza.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/productos/formaBuscaCuentaContable.css" type="text/css" />
 		
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/ctbdefasientos/modalboxCtbDefAsientos.js"></script>
+        <script type="text/javascript" src="../../js/components/modalbox/ctbgenerapolizas/modalboxCtbGeneraPoliza.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/productos/modalboxBuscaCuentaContable.js"></script>
         <script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
-        <script type="text/javascript" src="../../js/implements/ctbdefasientos/index.js" ></script>
+        <script type="text/javascript" src="../../js/implements/ctbgenerapolizas/index.js" ></script>
         
         #include("${layoutmenu}")
         
@@ -29,74 +29,16 @@
 			<tr>
 				<td width="15" height="30"></td>
 				<td height="30"><a href="new_item" class="tooltip"><div class="onmouseOutNewItem" id="nItem"></div><span>Registrar nuevo</span></a></td>
-				<td width="15" height="30"></td>
-				<td height="30"><a href="visualiza_buscador" class="tooltip"><div class="onmouseOutVisualizaBuscador" id="vbuscador"></div><span>Busqueda</span></a>  </td>
 			</tr>
 		</table>
-        
-        <!--Esta tabla va  en la barra de buscador -->
-		<table border="0" class="tabla_buscador" style="display:none">
-			<tr>
-				<td colspan="13">&nbsp;&nbsp;</td>
-			</tr>
-			<tr>
-				<td width="10">&nbsp;</td>
-				<!--
-				<td width="150">Sucursal</td>
-				<td width="10">&nbsp;</td>
-				-->
-				<td width="150">Tipo&nbsp;de&nbsp;P&oacute;liza</td>
-				<td width="10">&nbsp;</td>
-				<td width="100">Folio</td>
-				<td width="10">&nbsp;</td>
-				<td width="250">Nombre</td>
-				<td width="50">&nbsp;</td>
-				<td width="70"></td>
-				<td width="10">&nbsp;</td>
-				<td width="70"></td>
-				<td width="10">&nbsp;</td>
-			</tr>
-			
-			<tr>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<!--
-				<td width="150"><select name="busqueda_select_sucursal" style="width:150px;"><option value="0" selected="yes">[-- --]</option></select></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				-->
-				<td width="150"><select name="busqueda_select_tipo_poliza" style="width:150px;"><option value="0" selected="yes">[-- --]</option></select></td>
-				<td width="10">&nbsp;</td>
-				<td width="100"><input type="text" name="busqueda_folio" style="width:100px;"></td>
-				<td width="10">&nbsp;</td>
-				<td width="250"><input type="text" name="busqueda_nombre" style="width:250px;"></td>
-				<td width="50">&nbsp;</td>
-				<td width="70"><input type="button" value="Buscar" style="width:60px;"></td>
-				<td width="10">&nbsp;</td>
-				<td width="70"><input type="button" value="Limpiar" style="width:60px;"></td>
-				<td width="10">&nbsp;</td>
-			</tr>
-		</table>
-        
-        <!--  otra parte -->
-        <table class="acciones">
-            <tr>
-                <td>&nbsp;&nbsp;</td>
-                <td >
-                    ${grid}
-                </td>
-            </tr>
-            <tr>
-                <td>&nbsp;&nbsp;</td>
-                <td ></td>
-            </tr>
-        </table>
 		
         
         <!--form for definicion de asientos -->
-        <form id="formactbdefasientos00" action="edit.json" method="POST" >
+        <form id="formactbgenerapolizas00" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
-                <div id="div_one" class="panelcito_modal ctbdefasientos_div_one"  style="display:none;" title="">
+                <div id="div_one" class="panelcito_modal ctbgenerapolizas_div_one"  style="display:none;" title="">
 					<input type="hidden" name="identificador">
-                    <div id="div_two" title="" class="ctbdefasientos_div_two">
+                    <div id="div_two" title="" class="ctbgenerapolizas_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" id="cierra" style="width:550px; padding-left:6px;"><strong>${title}</strong></div>
                             <div class="fixed column" style="width:20px; height:25px;">
@@ -105,11 +47,11 @@
                         </div>
                     </div>
                     
-                    <div id="div_three" title="" class="ctbdefasientos_div_three">
+                    <div id="div_three" title="" class="ctbgenerapolizas_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
-                                    <li><a href="#tabx-1"><strong>Definici&oacute;n</strong></a></li>
+                                    <li><a href="#tabx-1"><strong>Generar</strong></a></li>
                                 </ul>
                             </div>
                         </div>
