--- a/erp-quimicos/src/main/webapp/vm/gralimpret/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/gralimpret/startup.vm
@@ -6,14 +6,14 @@
         #include("${layoutheader}")
 		
         <!--  css for this catalogo -->
-        <link rel="stylesheet" href="../../css/modalbox/gralimptras/formaGralImpTras.css" type="text/css" />
+        <link rel="stylesheet" href="../../css/modalbox/gralimpret/formaGralImpRet.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/productos/formaBuscaCuentaContable.css" type="text/css" />
 		
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/gralimptras/modalboxGralImpTras.js"></script>
+        <script type="text/javascript" src="../../js/components/modalbox/gralimpret/modalboxGralImpRet.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/productos/modalboxBuscaCuentaContable.js"></script>
-        <script type="text/javascript" src="../../js/implements/gralimptras/index.js" ></script>
+        <script type="text/javascript" src="../../js/implements/gralimpret/index.js" ></script>
         
         #include("${layoutmenu}")
         
@@ -66,13 +66,12 @@
             </tr>
         </table>
         
-        <!--form for inventario de IEPS -->
-        <form id="formagralimptras" action="edit.json" method="POST" >
+        <form id="formagralimpret" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
-                <div id="div_one" class="panelcito_modal gralimptras_div_one"  style="display:none;" title="">
+                <div id="div_one" class="panelcito_modal gralimpret_div_one"  style="display:none;" title="">
                 <input type="hidden" name="identificador" value="0">
                 <input type="hidden" name="cta_id" value="0">
-				<div id="div_two" title="" class="gralimptras_div_two">
+				<div id="div_two" title="" class="gralimpret_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" id="cierra" style="width:370px; padding-left:6px;"><strong>${title}</strong></div>
                             <div class="fixed column" style="width:30px; height:25px;">
@@ -80,7 +79,7 @@
                             </div>
                         </div>
                     </div>    
-                      <div id="div_three" title="" class="gralimptras_div_three">
+                      <div id="div_three" title="" class="gralimpret_div_three">
                         <div class="columns" >
                             <div class=" fixed column">
                                 <ul class="pestanas">
