--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -556,6 +556,7 @@
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../ctbpolizacontable/startup.agnux">P&oacute;lizas Contables</a></li>
+													<li class="topline"><a href="../ctbgenerapolizas/startup.agnux">Generaci&oacute;n de P&oacute;lizas</a></li>
 												</ul>
 											</li>
 											
@@ -717,6 +718,7 @@
 													<li><a href="../graldeptos/startup.agnux">Departamentos</a></li>
 													<li><a href="../graldeptosturnos/startup.agnux">Turnos</a></li>
 													<li><a href="../gralimptras/startup.agnux">IVA Trasladado</a></li>
+													<li><a href="../gralimpret/startup.agnux">IVA Retenido</a></li>
 													<li><a href="../gralieps/startup.agnux">IEPS</a></li>
 													
 													<li><a href="../gralpercepciones/startup.agnux">Percepciones</a></li>
