--- a/erp-quimicos/src/main/webapp/css/modalbox/ctbgenerapolizas/formaCtbGeneraPoliza.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/ctbgenerapolizas/formaCtbGeneraPoliza.css
@@ -98,7 +98,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .ctbgenerapolizas_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:600px;
+	width:780px;
     height:450px;
 	border-radius:10px;
 	background-color:#e9e9e9;
@@ -110,7 +110,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .ctbgenerapolizas_div_two{
 	/*font-family:tahoma;*/
-    width:600px;
+    width:780px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -162,26 +162,37 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 	height:17px;
 }
 
+table tr td.grid_head {
+	background: #fff;
+	background-color:rgb(180,180,180);
+	border-right: 1px solid #ccc;
+	padding:2px;
+	text-align: center;
+	vertical-align:middle;
+}
+
 table tr td.grid {
 	background: #fff;
 	border-right: 1px solid #ccc;
 	padding: 2px;
-	text-align: center;
+	text-align:center;
 	vertical-align:middle;
 }
 
 table tr td.grid1 {
 	background: #fff;
-	border-right: 1px solid #ccc;
+	border:1px solid #ccc;
+	font-size:11px;
 	padding: 2px;
-	text-align: left;
+	text-align:left;
 	vertical-align:middle;
 }
 
 table tr td.grid2 {
 	background: #fff;
-	border-right: 1px solid #ccc;
+	border:1px solid #ccc;
+	font-size:11px;
 	padding: 2px;
-	text-align: right;
+	text-align:right;
 	vertical-align:middle;
 }
